TestSuite/errors/err0415.pas
type
  T = class
    public function f(self: integer) := self;
  end;

begin
end.